
Please send Guile bug reports to bug-guile@gnu.org.

Each release reports the NEWS in the following sections:

* Changes to the distribution
* Changes to the stand-alone interpreter
* Changes to Scheme functions and syntax
* Changes to the C interface 


Changes since Guile 1.6.4 (i.e. changes for 1.6.5):

* Changes to the distribution
* Changes to the stand-alone interpreter
* Changes to Scheme functions and syntax

** SRFI-1 delete equality argument order fixed.

In the srfi-1 module delete and delete!, the order of the arguments to
the "=" procedure now matches the SRFI-1 specification.

* Changes to the C interface 


Changes since Guile 1.6.3 (i.e. changes for 1.6.4):

* Changes to the distribution

** Various architecture (and compiler optimization) related bugs fixed.

These changes should improve the situation on at least ia64, alpha,
and powerpc.

* Changes to the stand-alone interpreter

** Readline prompt problem fixed.

Previously, the readline prompt disappeared when running Guile in
non-echoing terminal mode (for example under GDB in Emacs).  This has
been fixed.

** Printing bug fixed.

Previously, the state of writingp in the print state could be altered
by recursive calls to printing functions.

** Append mode in hooks.

Append mode in hooks (adding the hook last in the list) now works
correctly.

** GOOPS/GC bug fixed.

The class layout slot, which informs the GC about which slots to GC
protect, is now initialized correctly.

** GOOPS class redefinition bug fixed.

The class redefinition protocol now properly removes the old accessor
methods from their accessors.

** GOOPS method dispatch bug fixed.

Previously, the code updating the method cache in generic functions
got confused if handed method code created in a null environment
(environment = empty list).  It now stands every environment
imaginable (think about it!).

** GOOPS init-thunks can now be primitive procedures

Previously, attempts to provide something else than a closure as value