@@ -46,6 +46,7 @@ For fixes or providing information which led to a fix:
            Eric Hanchrow
 	Utz-Uwe Haus
         Karl M. Hegbloom
+            Sam Hocevar
 	 Anders Holst
          Stefan Jahn
       Steven G. Johnson
